--- a/edubot/web/index.html
+++ b/edubot/web/index.html
@@ -17,6 +17,7 @@
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
+  <meta name="google-signin-client_id" content="329699147077-3jhmlv6m2itct4eoafjnedombc6deoco.apps.googleusercontent.com" />
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
